--- a/src/views/channel/changePassword.pug
+++ b/src/views/channel/changePassword.pug
@@ -1,7 +1,7 @@
 extends ../base/layout
 
 block content
-    section.change-password-channel
+    section.change-password-channel.center
         header
             h1
                 strong change-password
