--- a/src/views/base/partials/header.pug
+++ b/src/views/base/partials/header.pug
@@ -25,11 +25,11 @@ header.header-container
             ul.avatar-click-menu.hidden
                 li
                     a(href=`/channel/${channel._id}`) 
-                        i.ic-my-channel
+                        i.ic-your-channel
                         span My Channel
                 li
                     a(href=`/channel/${channel._id}/edit`) 
-                        i.ic-edit-channel
+                        i.ic-edit
                         span Edit Channel
                 li
                     a(href=`/channel/${channel._id}/logout`) 
