--- a/src/views/base/partials/nav.pug
+++ b/src/views/base/partials/nav.pug
@@ -25,8 +25,8 @@ nav
                 span Library
         li
             a(href="#")
-                i.ic-library
-                //- i.ic-library-fill
+                i.ic-your-videos
+                //- i.ic-your-videos-fill
                 span Your Videos
         li
             a(href="#")
